--- a/functions/source/choiceview-integration/Dockerfile
+++ b/functions/source/choiceview-integration/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ENV PATH="${PATH}:/root/.dotnet/tools"
 
 # copy csproj and restore as distinct layers
